force-app/main/default/objects/Contract/fields/FOPS_Agency_Commission_Percent__c.field-meta.xml
<CustomField>
    <fullName>FOPS_Agency_Commission_Percent__c</fullName>
    <label>Agency Commission %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>