force-app/main/default/objects/Contract/fields/FOPS_Auto_Renew__c.field-meta.xml
<CustomField>
    <fullName>FOPS_Auto_Renew__c</fullName>
    <label>Auto Renew</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>