force-app/main/default/objects/Contract/fields/FOPS_Contract_Value_Base__c.field-meta.xml
<CustomField>
    <fullName>FOPS_Contract_Value_Base__c</fullName>
    <label>Contract Value (Base)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>