force-app/main/default/objects/Contract/fields/FOPS_End_Client_Account__c.field-meta.xml
<CustomField>
    <fullName>FOPS_End_Client_Account__c</fullName>
    <label>End Client</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contracts (End Client)</relationshipLabel>
    <relationshipName>FOPS_EndClientContracts</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <type>Lookup</type>
</CustomField>