force-app/main/default/objects/Contract/fields/FOPS_Engagement_Status__c.field-meta.xml
<CustomField>
    <fullName>FOPS_Engagement_Status__c</fullName>
    <inlineHelpText>Operational lifecycle. Standard Status is constrained by StatusCode categories.</inlineHelpText>
    <label>Engagement Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending Start</fullName>
                <default>true</default>
                <label>Pending Start</label>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Extended</fullName>
            </value>
            <value>
                <fullName>Paused</fullName>
            </value>
            <value>
                <fullName>Notice Period</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Terminated Early</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>