force-app/main/default/objects/Contract/fields/FOPS_Governing_Law__c.field-meta.xml
<CustomField>
    <fullName>FOPS_Governing_Law__c</fullName>
    <label>Governing Law</label>
    <length>120</length>
    <type>Text</type>
</CustomField>