force-app/main/default/objects/Contract/fields/FOPS_Notice_Period_Days__c.field-meta.xml
<CustomField>
    <fullName>FOPS_Notice_Period_Days__c</fullName>
    <label>Notice Period (Days)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>