force-app/main/default/objects/Contract/fields/FOPS_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>FOPS_Opportunity__c</fullName>
    <label>Source Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Contracts</relationshipLabel>
    <relationshipName>FOPS_Contracts</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <type>Lookup</type>
</CustomField>