force-app/main/default/objects/Contract/fields/FOPS_Payment_Terms_Days__c.field-meta.xml
<CustomField>
    <fullName>FOPS_Payment_Terms_Days__c</fullName>
    <label>Payment Terms (Days)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>