force-app/main/default/objects/Contract/fields/FOPS_PO_Number__c.field-meta.xml
<CustomField>
    <fullName>FOPS_PO_Number__c</fullName>
    <inlineHelpText>Many clients will not pay without it. Capture before work starts.</inlineHelpText>
    <label>PO Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>