force-app/main/default/objects/Contract/fields/FOPS_Renewal_Review_Date__c.field-meta.xml
<CustomField>
    <fullName>FOPS_Renewal_Review_Date__c</fullName>
    <label>Renewal Review Date</label>
    <formula>EndDate - 60</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <type>Date</type>
</CustomField>