force-app/main/default/objects/Contract/fields/FOPS_Signed_Document_Link__c.field-meta.xml
<CustomField>
    <fullName>FOPS_Signed_Document_Link__c</fullName>
    <label>Signed Document Link</label>
    <type>Url</type>
</CustomField>