force-app/main/default/objects/Contract/fields/FOPS_Timesheet_Period__c.field-meta.xml
<CustomField>
    <fullName>FOPS_Timesheet_Period__c</fullName>
    <label>Timesheet Period</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Bi-weekly</fullName>
            </value>
            <value>
                <fullName>Semi-monthly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>